--- a/src/main/resources/assets/testytestmod/lang/en_us.json
+++ b/src/main/resources/assets/testytestmod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-	"item.testytestmod.testytestitem": "Testy Test Item"
+	"item.testytestmod.testytestitem": "Testy Test Item",
+	"item.testytestmod.testiertestitem": "Testy Testy Test Item",
+	"itemgroup.testytest": "Testy Test Group"
+	
 }
