--- a/src/main/resources/assets/testytestmod/lang/en_us.json
+++ b/src/main/resources/assets/testytestmod/lang/en_us.json
@@ -3,6 +3,7 @@
 	"item.testytestmod.testiertestitem": "Testy Testy Test Item",
 	
 	"block.testytestmod.testytest_block": "Block of Testy Test",
+	"block.testytestmod.testiertest_block": "Block of Testier Test",
 	
 	
 	"itemgroup.testytest": "Testy Test Group"
